trybuild_tests/1_70/test_ref_cannot_leak_secret.stderr
error[E0597]: `not_static_a` does not live long enough
  --> trybuild_tests/1_70/test_ref_cannot_leak_secret.rs:14:56
   |
12 |     let not_static_a: GlobalA = GlobalA { _inner: 70 };
   |         ------------ binding `not_static_a` declared here
13 |
14 |     let secret_two: Secret<&GlobalA, U2> = Secret::new(&not_static_a);
   |                                                        ^^^^^^^^^^^^^ borrowed value does not live long enough
15 |
16 |     let (_, exposed_secret_two) = secret_two.expose_secret(|exposed_secret| *exposed_secret);
   |                                   ---------------------------------------------------------- argument requires that `not_static_a` is borrowed for `'static`
...
20 | }
   | - `not_static_a` dropped here while still borrowed
   |
note: due to current limitations in the borrow checker, this implies a `'static` lifetime
  --> src/traits.rs
   |
   |         for<'brand> ClosureType: FnOnce(Self::Exposed<'brand>) -> ReturnType,
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
